graphics/opencolorio/files/log
In file included from /opt/local/var/macports/build/opencolorio-573303f6/work/OpenColorIO-2.5.1/src/OpenColorIO/SystemMonitor.cpp:30:
/opt/local/var/macports/build/opencolorio-573303f6/work/OpenColorIO-2.5.1/src/OpenColorIO/SystemMonitor_macos.cpp: In function 'std::string OpenColorIO_v2_5::{anonymous}::GetICCProfilePath(CGDirectDisplayID)':
/opt/local/var/macports/build/opencolorio-573303f6/work/OpenColorIO-2.5.1/src/OpenColorIO/SystemMonitor_macos.cpp:45:35: error: too many arguments to function 'CMError CMGetProfileLocation(CMProfileRef, CMProfileLocation*)'
   45 |         err = CMGetProfileLocation(cmProfile, &profileLoc, &locationSize);
      |               ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /System/Library/Frameworks/ApplicationServices.framework/Frameworks/QD.framework/Headers/QD.h:29,
                 from /System/Library/Frameworks/ApplicationServices.framework/Headers/ApplicationServices.h:30,
                 from /opt/local/var/macports/build/opencolorio-573303f6/work/OpenColorIO-2.5.1/src/OpenColorIO/SystemMonitor_macos.cpp:5:
/System/Library/Frameworks/ApplicationServices.framework/Frameworks/ColorSync.framework/Headers/ColorSyncDeprecated.h:1989:1: note: declared here
 1989 | CMGetProfileLocation(
      | ^~~~~~~~~~~~~~~~~~~~
/opt/local/var/macports/build/opencolorio-573303f6/work/OpenColorIO-2.5.1/src/OpenColorIO/SystemMonitor_macos.cpp:54:56: error: 'CMPathLocation' {aka 'struct CMPathLocation'} has no member named 'fileSpec'
   54 |                 FSSpec *fsSpec = &profileLoc.u.pathLoc.fileSpec;
      |                                                        ^~~~~~~~
/opt/local/var/macports/build/opencolorio-573303f6/work/OpenColorIO-2.5.1/src/OpenColorIO/SystemMonitor_macos.cpp: In function 'std::string OpenColorIO_v2_5::GetMonitorDescription(const std::string&)':
/opt/local/var/macports/build/opencolorio-573303f6/work/OpenColorIO-2.5.1/src/OpenColorIO/SystemMonitor_macos.cpp:168:27: error: 'CMPathLocation' {aka 'struct CMPathLocation'} has no member named 'fileSpec'
  168 |             loc.u.pathLoc.fileSpec = fsSpec;
      |                           ^~~~~~~~
/opt/local/var/macports/build/opencolorio-573303f6/work/OpenColorIO-2.5.1/src/OpenColorIO/SystemMonitor_macos.cpp:177:23: error: 'CMGetProfileDescriptionString' was not declared in this scope; did you mean 'CMCopyProfileDescriptionString'?
  177 |                 err = CMGetProfileDescriptionString(profile, descriptionStr);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                       CMCopyProfileDescriptionString
make[2]: *** [src/OpenColorIO/CMakeFiles/OpenColorIO.dir/SystemMonitor.cpp.o] Error 1
make[2]: Leaving directory `/opt/local/var/macports/build/opencolorio-573303f6/work/build'
make[1]: *** [src/OpenColorIO/CMakeFiles/OpenColorIO.dir/all] Error 2
make[1]: Leaving directory `/opt/local/var/macports/build/opencolorio-573303f6/work/build'
make: *** [all] Error 2
